# matey

./: .clang-format  .gitignore  CMakeLists.txt  make_VS2022.bat
m6502/: CMakeLists.txt
m6502/src/: main.cpp
m6502Lib/: CMakeLists.txt
m6502Lib/src/: 6502.cpp  6502.h
m6502Test/: CMakeLists.txt
m6502Test/src/: 6502Tests.cpp  main_6502.cpp
src/: main.cpp
